--- a/styles/content.module.css
+++ b/styles/content.module.css
@@ -1,5 +1,7 @@
 .content {
+    position: relative;
     width: 100%;
     height: calc(100vh - 90px);
     background-color: #fff;
+    overflow-y: scroll;
 }
